; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_ledger.c_ledger_get_entry_info.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_ledger.c_ledger_get_entry_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, %struct.ledger_entry* }
%struct.ledger_entry = type { i32 }
%struct.ledger_entry_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ledger_get_entry_info(%struct.TYPE_3__* %0, i32 %1, %struct.ledger_entry_info* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ledger_entry_info*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.ledger_entry*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.ledger_entry_info* %2, %struct.ledger_entry_info** %6, align 8
  %9 = call i32 (...) @mach_absolute_time()
  store i32 %9, i32* %7, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %11 = icmp ne %struct.TYPE_3__* %10, null
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load %struct.ledger_entry_info*, %struct.ledger_entry_info** %6, align 8
  %15 = icmp ne %struct.ledger_entry_info* %14, null
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32, i32* %5, align 4
  %19 = icmp sge i32 %18, 0
  br i1 %19, label %20, label %37

20:                                               ; preds = %3
  %21 = load i32, i32* %5, align 4
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = icmp slt i32 %21, %24
  br i1 %25, label %26, label %37

26:                                               ; preds = %20
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 1
  %29 = load %struct.ledger_entry*, %struct.ledger_entry** %28, align 8
  %30 = load i32, i32* %5, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.ledger_entry, %struct.ledger_entry* %29, i64 %31
  store %struct.ledger_entry* %32, %struct.ledger_entry** %8, align 8
  %33 = load %struct.ledger_entry*, %struct.ledger_entry** %8, align 8
  %34 = load %struct.ledger_entry_info*, %struct.ledger_entry_info** %6, align 8
  %35 = load i32, i32* %7, align 4
  %36 = call i32 @ledger_fill_entry_info(%struct.ledger_entry* %33, %struct.ledger_entry_info* %34, i32 %35)
  br label %37

37:                                               ; preds = %26, %20, %3
  ret void
}

declare dso_local i32 @mach_absolute_time(...) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @ledger_fill_entry_info(%struct.ledger_entry*, %struct.ledger_entry_info*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
